--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,5 @@
     <color name="azulpri">#89C0CC</color>
     <color name="azulsec">#25556B</color>
     <color name="azulterc">#D1ECEE</color>
-
+    <color name="azulquart">#54A4B6</color>
 </resources>
