--- a/app/src/main/res/layout/activity_criar_conta_view.xml
+++ b/app/src/main/res/layout/activity_criar_conta_view.xml
@@ -28,75 +28,94 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_margin="20dp"
-        android:padding="20dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/container"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="20dp">
 
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
+            android:text="Criar conta"
+            android:textStyle="bold"
             android:textAlignment="center"
-            android:text="Criar conta" />
+            android:textSize="30dp" />
 
         <EditText
             android:id="@+id/edt_nome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:drawableRight="@drawable/editar"
             android:ems="10"
-            android:inputType="textPersonName"
             android:hint="Nome"
-            android:drawableRight="@drawable/editar"/>
+            android:inputType="textPersonName" />
 
         <EditText
             android:id="@+id/edt_sobrenome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:drawableRight="@drawable/editar"
             android:ems="10"
-            android:inputType="textPersonName"
             android:hint="Sobrenome"
-            android:drawableRight="@drawable/editar"/>
+            android:inputType="textPersonName" />
 
         <EditText
             android:id="@+id/edt_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:drawableRight="@drawable/gmaillogo"
             android:ems="10"
             android:hint="Email:"
-            android:drawableRight="@drawable/gmaillogo"
             android:inputType="textEmailAddress" />
 
         <EditText
             android:id="@+id/edt_senha"
-            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:drawableRight="@drawable/locked"
             android:ems="10"
             android:hint="Senha"
-            android:drawableRight="@drawable/locked"
             android:inputType="textPassword" />
 
         <EditText
             android:id="@+id/edt_repsenha"
-            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:drawableRight="@drawable/locked"
             android:ems="10"
             android:hint="Repita sua senha"
-            android:drawableRight="@drawable/locked"
             android:inputType="textPassword" />
 
-        <EditText
-            android:id="@+id/edt_area"
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="Área"
-            android:drawableRight="@drawable/editar"/>
+            app:endIconDrawable="@drawable/area"
+            android:backgroundTint="@color/azulsec"
+            >
+
+            <!-- Inside text input layout add
+                  an auto complete text view
+                    and make its input type to none-->
+            <AutoCompleteTextView
+                android:id="@+id/edt_area"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:inputType="none"
+                android:hint="Area:"
+
+                />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -105,30 +124,30 @@
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/bt_voltarlogin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="5dp"
-            android:padding="10dp"
-            android:layout_marginRight="15dp"
-            android:textColor="@color/white"
-            android:background="@drawable/btshape"
-            android:text="Voltar" />
+            <Button
+                android:id="@+id/bt_voltarlogin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="15dp"
+                android:background="@drawable/btshape"
+                android:padding="10dp"
+                android:text="Voltar"
+                android:textColor="@color/white" />
 
-        <Button
-            android:id="@+id/bt_criarconta"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="15dp"
-            android:padding="10dp"
+            <Button
+                android:id="@+id/bt_criarconta"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
 
-            android:layout_marginRight="15dp"
-            android:textColor="@color/white"
-            android:background="@drawable/btshape"
-            android:text="Criar conta" />
+                android:background="@drawable/btshape"
+                android:padding="10dp"
+                android:text="Criar conta"
+                android:textColor="@color/white" />
 
         </LinearLayout>
 
