--- a/app/src/main/res/layout/activity_home_professor_view.xml
+++ b/app/src/main/res/layout/activity_home_professor_view.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -6,31 +7,73 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/backsenha"
     tools:context=".HomeProfessorView">
 
-    <include
-        layout="@layout/appbarprin"
-        />
-
-    <ImageButton
-        android:id="@+id/imageButton2"
-        android:layout_margin="40dp"
+    <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/aluno_tipo" />
+        android:layout_height="125dp"
+        android:background="@color/azulpri"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark"
+        android:id="@+id/toolbarprin_prof"
+        >
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="120dp"
+            android:src="@drawable/logo_white"
+            android:layout_gravity="center_horizontal"
+            />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/bt_perfil"
+            app:civ_border_width="4dp"
+            android:layout_marginRight="20dp"
+            android:layout_gravity="end"
+            android:src="@drawable/anotacoes"
+            app:civ_border_color="@android:color/transparent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </androidx.appcompat.widget.Toolbar>
 
     <TextView
-        android:id="@+id/textView18"
-        android:textAlignment="center"
+        android:id="@+id/textView17"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
-
-    <Button
-        android:id="@+id/bt_criarassunto"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:text="Salas" />
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="50dp"
-        android:text="criar assunto" />
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
+
+
+
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            tools:itemCount="5"
+            tools:listitem="@layout/card_view_design" />
+
+        <ImageButton
+            android:layout_marginTop="20dp"
+            android:id="@+id/bt_criarsala"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            app:srcCompat="@drawable/btmais" />
+
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
