--- a/app/src/main/res/layout/activity_recuperar_senha_view.xml
+++ b/app/src/main/res/layout/activity_recuperar_senha_view.xml
@@ -38,19 +38,23 @@
         android:orientation="vertical">
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/edt_Emailrep"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email:"
+            android:textColorHint="@color/azulsec"
             android:background="@color/white"
             app:endIconDrawable="@drawable/gmaillogo"
             app:endIconTint="@color/azulsec"
             app:endIconMode="custom"
-            android:textColorHint="@color/azulsec"
-
+            app:boxCornerRadiusBottomEnd="10dp"
+            app:boxCornerRadiusBottomStart="10dp"
+            app:boxCornerRadiusTopEnd="10dp"
+            app:boxCornerRadiusTopStart="10dp"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edt_emailrep"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 />
