--- a/app/src/main/res/layout/activity_tipo_conta_aluno_view.xml
+++ b/app/src/main/res/layout/activity_tipo_conta_aluno_view.xml
@@ -19,6 +19,7 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:layout_marginTop="10dp"
+        android:textStyle="bold"
         android:textSize="20dp"
         android:text="Selecione o tipo de estudo" />
 
@@ -31,7 +32,7 @@
         android:layout_margin="20dp"
         >
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="170dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center_horizontal"
