--- a/app/src/main/res/layout/fragment_perfil_alu_ind.xml
+++ b/app/src/main/res/layout/fragment_perfil_alu_ind.xml
@@ -17,10 +17,10 @@
             app:civ_border_width="4dp"
             android:layout_marginTop="20dp"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/ic_person"
-            app:civ_border_color="#FF000000"
-            android:layout_width="200dp"
-            android:layout_height="200dp"/>
+            android:src="@drawable/anotacoes"
+            app:civ_border_color="@android:color/transparent"
+            android:layout_width="150dp"
+            android:layout_height="170dp"/>
 
         <TextView
             android:id="@+id/txt_nomecomp"
@@ -30,6 +30,7 @@
             android:textColor="@color/black"
             android:layout_marginTop="20dp"
             android:textSize="20sp"
+            android:fontFamily="@font/nunito_bold"
             android:textStyle="bold"
             android:text=" " />
 
@@ -37,8 +38,9 @@
             android:id="@+id/txt_area"
             android:textAlignment="center"
             android:layout_width="wrap_content"
-            android:layout_marginTop="20dp"
-            android:textSize="20sp"
+            android:layout_marginTop="5dp"
+            android:textSize="15sp"
+            android:fontFamily="@font/nunito_bold"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/container"
             android:textColor="@color/azulpri"
@@ -51,9 +53,10 @@
             android:id="@+id/txt_emailperfil"
             android:textAlignment="center"
             android:layout_width="match_parent"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="5dp"
             android:textSize="20sp"
             android:textStyle="bold"
+            android:fontFamily="@font/nunito_bold"
             android:textColor="@color/black"
             android:layout_height="wrap_content"
             android:text=" " />
@@ -68,17 +71,18 @@
                 android:id="@+id/bt_ireditarperfil"
                 android:layout_width="match_parent"
                 android:textAlignment="viewStart"
-                android:layout_marginTop="20dp"
+                android:fontFamily="@font/nunito_bold"
                 android:drawableLeft="@drawable/edit_azul"
                 android:backgroundTint="@color/white"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
                 android:text="Editar perfil" />
 
             <Button
                 android:id="@+id/bt_redefinirsenha"
                 android:layout_width="match_parent"
                 android:backgroundTint="@color/white"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
+                android:fontFamily="@font/nunito_bold"
                 android:textAlignment="viewStart"
                 android:drawableLeft="@drawable/esqueceu_azul"
                 android:text="Trocar senha" />
@@ -88,7 +92,8 @@
                 android:layout_width="match_parent"
                 android:backgroundTint="@color/white"
                 android:textAlignment="viewStart"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
+                android:fontFamily="@font/nunito_bold"
                 android:drawableLeft="@drawable/saibamais_azul"
                 android:text="Saiba mais" />
 
@@ -96,8 +101,9 @@
                 android:id="@+id/bt_sairconta"
                 android:layout_width="match_parent"
                 android:textAlignment="viewStart"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
                 android:backgroundTint="@color/white"
+                android:fontFamily="@font/nunito_bold"
                 android:drawableLeft="@drawable/logout_azul"
                 android:text=" Sair da conta " />
 
@@ -107,7 +113,8 @@
                 android:textStyle="bold"
                 android:textAlignment="viewStart"
                 android:backgroundTint="@color/white"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
+                android:fontFamily="@font/nunito_bold"
                 android:drawableLeft="@drawable/bt_sairrosa"
                 android:text="Excluir conta "
                 />
