--- a/app/src/main/res/layout/activity_home_aluno_ind_view.xml
+++ b/app/src/main/res/layout/activity_home_aluno_ind_view.xml
@@ -11,7 +11,7 @@
 
     <include
         android:id="@+id/appbar2"
-        layout="@layout/appbarperfil" />
+        layout="@layout/appbarprin" />
 
     <FrameLayout
         android:id="@+id/fragment_container"
