--- a/app/src/main/res/layout/activity_home_aluno_acom_view.xml
+++ b/app/src/main/res/layout/activity_home_aluno_acom_view.xml
@@ -31,10 +31,10 @@
             app:civ_border_width="4dp"
             android:layout_marginRight="20dp"
             android:layout_gravity="end"
-            android:src="@drawable/anotacoes"
+            android:src="@drawable/area"
             app:civ_border_color="@android:color/transparent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_width="50dp"
+            android:layout_height="50dp"/>
     </androidx.appcompat.widget.Toolbar>
 
 
@@ -50,7 +50,7 @@
 
     <ImageButton
 
-        android:id="@+id/bt_EntrarSala"
+        android:id="@+id/bt_seleciona"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:layout_gravity="right"
@@ -69,7 +69,7 @@
 
     <ImageButton
         android:layout_marginTop="20dp"
-        android:id="@+id/imageButton3"
+        android:id="@+id/bt_EntrarSala"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
