--- a/app/src/main/res/layout/activity_perfil_prof_view.xml
+++ b/app/src/main/res/layout/activity_perfil_prof_view.xml
@@ -14,9 +14,10 @@
 </include>
     <de.hdodenhof.circleimageview.CircleImageView
         app:civ_border_width="4dp"
+        android:id="@+id/img_perfil"
         android:layout_marginTop="20dp"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/anotacoes"
+        android:src="@drawable/aluno_tipo"
         app:civ_border_color="@android:color/transparent"
         android:layout_width="150dp"
         android:layout_height="170dp"/>
