--- a/app/src/main/res/layout/activity_quiz_inicio.xml
+++ b/app/src/main/res/layout/activity_quiz_inicio.xml
@@ -41,7 +41,7 @@
         android:text="Vamos jogar?" />
 
     <Button
-        android:id="@+id/bt_enviar7"
+        android:id="@+id/bt_jogar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -77,7 +77,7 @@
         android:text="NÍVEL DO JOGO" />
 
     <Button
-        android:id="@+id/bt_enviar"
+        android:id="@+id/bt_sair"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
