--- a/app/src/main/res/layout/fragment_home_aluno_ind.xml
+++ b/app/src/main/res/layout/fragment_home_aluno_ind.xml
@@ -78,31 +78,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <LinearLayout
-                android:id="@+id/sis_dig"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/container"
-                android:backgroundTint="@color/azulsec"
-                android:layout_margin="20dp"
-                android:padding="10dp"
-                android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/imageView7"
-                    android:layout_width="150dp"
-                    android:layout_height="120dp"
-                    app:srcCompat="@drawable/sisdigestivo" />
-
-                <TextView
-                    android:id="@+id/textView7"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:textColor="@color/white"
-                    android:textAlignment="center"
-                    android:text="Sistema Digestório" />
-            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/sis_esq"
@@ -130,38 +106,6 @@
                     android:text="Sistema Esquelético" />
             </LinearLayout>
 
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-
-            <LinearLayout
-                android:id="@+id/sis_uri"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/container"
-                android:backgroundTint="@color/azulsec"
-                android:layout_margin="20dp"
-                android:padding="10dp"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/imageView8"
-                    android:layout_width="150dp"
-                    android:layout_height="120dp"
-                    app:srcCompat="@drawable/sisuri" />
-
-                <TextView
-                    android:id="@+id/textView8"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:textColor="@color/white"
-                    android:textAlignment="center"
-                    android:text="Sistema Urinário" />
-            </LinearLayout>
-
             <LinearLayout
                 android:id="@+id/sis_musc"
                 android:layout_width="wrap_content"
@@ -187,38 +131,23 @@
                     android:textAlignment="center"
                     android:text="Sistema Muscular" />
             </LinearLayout>
+
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
-            <LinearLayout
-                android:id="@+id/sis_fem"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/container"
-                android:backgroundTint="@color/azulsec"
-                android:layout_margin="20dp"
-                android:padding="10dp"
-                android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/imageView35"
-                    android:layout_width="150dp"
-                    android:layout_height="120dp"
-                    app:srcCompat="@drawable/sis_masc" />
 
-                <TextView
-                    android:id="@+id/textView36"
 
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:textColor="@color/white"
-                    android:text="Sistema Reprodutor Feminino" />
+        </TableRow>
 
-            </LinearLayout>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+
 
             <LinearLayout
                 android:id="@+id/sis_masc"
@@ -234,7 +163,7 @@
                     android:id="@+id/imageView37"
                     android:layout_width="150dp"
                     android:layout_height="120dp"
-                    app:srcCompat="@drawable/sis_masc" />
+                    app:srcCompat="@drawable/sis_fem" />
 
                 <TextView
                     android:id="@+id/textView38"
@@ -243,69 +172,12 @@
                     android:layout_marginTop="20dp"
                     android:textColor="@color/white"
                     android:textAlignment="center"
-                    android:text="Sistema Reprodutor Masculino" />
+                    android:text="Sistema Reprodutor Feminino" />
 
             </LinearLayout>
         </TableRow>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
 
-            <LinearLayout
-                android:id="@+id/sis_resp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/container"
-                android:backgroundTint="@color/azulsec"
-                android:layout_margin="20dp"
-                android:padding="10dp"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/imageView40"
-                    android:layout_width="150dp"
-                    android:layout_height="120dp"
-                    app:srcCompat="@drawable/sis_resp" />
-
-                <TextView
-                    android:id="@+id/textView41"
-
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:textColor="@color/white"
-                    android:text="Sistema Respiratório" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/sis_tegu"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/container"
-                android:backgroundTint="@color/azulsec"
-                android:layout_margin="20dp"
-                android:padding="10dp"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/imageView42"
-                    android:layout_width="150dp"
-                    android:layout_height="120dp"
-                    app:srcCompat="@drawable/sis_tegu" />
-
-                <TextView
-                    android:id="@+id/textView43"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:textColor="@color/white"
-                    android:textAlignment="center"
-                    android:text="Sistema Tegumentar" />
-
-            </LinearLayout>
-        </TableRow>
 
 
 
