--- a/app/src/main/res/layout/fragment_perfil_alu_ind.xml
+++ b/app/src/main/res/layout/fragment_perfil_alu_ind.xml
@@ -17,7 +17,7 @@
             app:civ_border_width="4dp"
             android:layout_marginTop="20dp"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/anotacoes"
+            android:src="@drawable/aluno_tipo"
             app:civ_border_color="@android:color/transparent"
             android:layout_width="150dp"
             android:layout_height="170dp"/>
