--- a/app/src/main/res/layout/fragment_quiz_aluno_ind.xml
+++ b/app/src/main/res/layout/fragment_quiz_aluno_ind.xml
@@ -6,6 +6,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".QuizAlunoInd">
 
+<ScrollView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+
 
     <TableLayout
         android:layout_width="wrap_content"
@@ -26,10 +30,101 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/imageView6"
+                    android:id="@+id/imageView1"
                     android:layout_width="150dp"
                     android:layout_height="120dp"
                     app:srcCompat="@drawable/cardio" />
+
+                <TextView
+                    android:id="@+id/textView1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:textColor="@color/white"
+                    android:text="Sistema cardiovascular" />
+
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:text="10 questões" />
+
+                <ProgressBar
+                    android:id="@+id/progressBar1"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="match_parent"
+                    android:foreground="@color/white"
+                    android:layout_height="wrap_content"
+                    />
+
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/sis_ner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/container"
+                android:backgroundTint="@color/azulsec"
+                android:layout_margin="20dp"
+                android:padding="10dp"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="150dp"
+                    android:layout_height="120dp"
+                    app:srcCompat="@drawable/sisnervoso" />
+
+                <TextView
+                    android:id="@+id/textView14"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:textColor="@color/white"
+                    android:textAlignment="center"
+                    android:text="Sistema Nervoso" />
+
+                <TextView
+                    android:id="@+id/textView17"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:text="10 questões" />
+
+                <ProgressBar
+                    android:id="@+id/progressBar3"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    />
+
+            </LinearLayout>
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <LinearLayout
+                android:id="@+id/sis_esq"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/container"
+                android:backgroundTint="@color/azulsec"
+                android:layout_margin="20dp"
+                android:padding="10dp"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/imageView6"
+                    android:layout_width="150dp"
+                    android:layout_height="120dp"
+                    app:srcCompat="@drawable/sisesq" />
 
                 <TextView
                     android:id="@+id/textView6"
@@ -37,7 +132,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:textColor="@color/white"
-                    android:text="Sistema cardiovascular" />
+                    android:text="Sistema esquelético" />
 
                 <TextView
                     android:id="@+id/textView67"
@@ -60,6 +155,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/sis_musc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/container"
@@ -72,7 +168,7 @@
                     android:id="@+id/imageView9"
                     android:layout_width="150dp"
                     android:layout_height="120dp"
-                    app:srcCompat="@drawable/sisnervoso" />
+                    app:srcCompat="@drawable/sis_muscle" />
 
                 <TextView
                     android:id="@+id/textView11"
@@ -81,7 +177,7 @@
                     android:layout_marginTop="20dp"
                     android:textColor="@color/white"
                     android:textAlignment="center"
-                    android:text="Sistema Nervoso" />
+                    android:text="Sistema Muscular" />
 
                 <TextView
                     android:id="@+id/textView12"
@@ -108,49 +204,7 @@
             android:layout_height="wrap_content">
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/container"
-                android:backgroundTint="@color/azulsec"
-                android:layout_margin="20dp"
-                android:padding="10dp"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/imageView7"
-                    android:layout_width="150dp"
-                    android:layout_height="120dp"
-                    app:srcCompat="@drawable/sisdigestivo" />
-
-
-                <TextView
-                    android:id="@+id/textView7"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:textColor="@color/white"
-                    android:textAlignment="center"
-                    android:text="Sistema Digestório" />
-
-                <TextView
-                    android:id="@+id/textView9"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:text="10 questões" />
-
-                <ProgressBar
-                    android:id="@+id/progressBar3"
-                    style="?android:attr/progressBarStyleHorizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    />
-
-
-            </LinearLayout>
-
-            <LinearLayout
+                android:id="@+id/sis_fem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/container"
@@ -163,7 +217,7 @@
                     android:id="@+id/imageView10"
                     android:layout_width="150dp"
                     android:layout_height="120dp"
-                    app:srcCompat="@drawable/sisesq" />
+                    app:srcCompat="@drawable/sis_fem" />
 
 
                 <TextView
@@ -173,7 +227,7 @@
                     android:layout_marginTop="20dp"
                     android:textColor="@color/white"
                     android:textAlignment="center"
-                    android:text="Sistema Esquelético" />
+                    android:text="Sistema Reprodutor Feminino" />
 
                 <TextView
                     android:id="@+id/textView8"
@@ -196,5 +250,5 @@
         </TableRow>
 
     </TableLayout>
-
+</ScrollView>
 </FrameLayout>
